test/errors/type/table/keys.yasl
mt.lookup({}, .keys)(1)
